--- a/bank-tutorial/taking_terminus_to_the_bank.ipynb
+++ b/bank-tutorial/taking_terminus_to_the_bank.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Database \"Bank_Balance_Example\" already exists!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the database\n",
     "try:\n",
@@ -53,9 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "APIError",
+     "evalue": "{\n  \"@type\":\"api:WoqlErrorResponse\",\n  \"api:error\": {\n    \"@type\":\"api:UnresolvableAbsoluteDescriptor\",\n    \"api:absolute_descriptor\":\"admin/Bank_Balance_Example/local/branch/main\"\n  },\n  \"api:message\":\"The following descriptor could not be resolved to a resource: 'admin/Bank_Balance_Example/local/branch/main'\",\n  \"api:status\":\"api:not_found\"\n}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAPIError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-ead959dd52c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;34m.\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"scm:balance\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"xsd:nonNegativeInteger\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"owner\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m ).execute(client, \"Adding bank account object to schema\")\n\u001b[0m",
+      "\u001b[0;32m~/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqlquery/woql_query.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, client, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    446\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    447\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 448\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommit_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    449\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    450\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mto_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self, woql_query, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    878\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconConfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery_url\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    879\u001b[0m             \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 880\u001b[0;31m             \u001b[0mrequest_file_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    881\u001b[0m         )\n\u001b[1;32m    882\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mdispatch\u001b[0;34m(self, action, url, payload, file_dict)\u001b[0m\n\u001b[1;32m   1224\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremote_auth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1225\u001b[0m             \u001b[0mfile_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1226\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsecure\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1227\u001b[0m         )\n\u001b[1;32m   1228\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqlclient/dispatchRequest.py\u001b[0m in \u001b[0;36msend_request_by_action\u001b[0;34m(cls, url, action, payload, basic_auth, remote_auth, file_dict, insecure)\u001b[0m\n\u001b[1;32m    205\u001b[0m                         \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m                         \u001b[0mrequest_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 207\u001b[0;31m                         \u001b[0mrequest_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    208\u001b[0m                     )\n\u001b[1;32m    209\u001b[0m                 )\n",
+      "\u001b[0;31mAPIError\u001b[0m: {\n  \"@type\":\"api:WoqlErrorResponse\",\n  \"api:error\": {\n    \"@type\":\"api:UnresolvableAbsoluteDescriptor\",\n    \"api:absolute_descriptor\":\"admin/Bank_Balance_Example/local/branch/main\"\n  },\n  \"api:message\":\"The following descriptor could not be resolved to a resource: 'admin/Bank_Balance_Example/local/branch/main'\",\n  \"api:status\":\"api:not_found\"\n}"
+     ]
+    }
+   ],
    "source": [
     "# Add the schema (there is no harm in adding repeatedly as it is idempotent)\n",
     "query = WQ().woql_and(\n",
@@ -72,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,17 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Witness of failure for mike: [{'@type': 'vio:ViolationWithDatatypeObject', 'vio:base_type': {'@type': 'xsd:string', '@value': 'xsd:nonNegativeInteger'}, 'vio:literal': {'@type': 'xsd:anySimpleType', '@value': -7}, 'vio:message': 'Not a well formed xsd:nonNegativeInteger', 'vio:property': {'@type': 'xsd:anyURI', '@value': 'terminusdb:///schema#balance'}}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try to make mike go below zero\n",
     "account_id, balance, new_balance = WQ().vars(\"AccountID\", \"Balance\", \"New Balance\")\n",
@@ -128,25 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "APIError",
-     "evalue": "[\n  {\n    \"@type\":\"vio:ViolationWithDatatypeObject\",\n    \"vio:base_type\": {\"@type\":\"xsd:string\", \"@value\":\"xsd:nonNegativeInteger\"},\n    \"vio:literal\": {\"@type\":\"xsd:anySimpleType\", \"@value\":-97},\n    \"vio:message\":\"Not a well formed xsd:nonNegativeInteger\",\n    \"vio:property\": {\"@type\":\"xsd:anyURI\", \"@value\":\"terminusdb:///schema#balance\"}\n  }\n]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAPIError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-7b5f47a50399>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Subtract less\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m query = WQ().woql_and(\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:owner\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Mike\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtriple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:balance\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mWQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_triple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"scm:balance\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbalance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlquery/woql_query.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, client, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    425\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    426\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 427\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommit_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mto_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self, woql_query, commit_msg, file_dict)\u001b[0m\n\u001b[1;32m    719\u001b[0m             \u001b[0mpayload\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mquery_obj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    720\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 721\u001b[0;31m         return self.dispatch(\n\u001b[0m\u001b[1;32m    722\u001b[0m             \u001b[0mAPIEndpointConst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWOQL_QUERY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconConfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery_url\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest_file_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    723\u001b[0m         )\n",
-      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/woqlClient.py\u001b[0m in \u001b[0;36mdispatch\u001b[0;34m(self, action, url, payload, file_dict)\u001b[0m\n\u001b[1;32m   1042\u001b[0m         \u001b[0;31m# self.conCapabilities.capabilitiesPermit(action)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1043\u001b[0m         \u001b[0;31m# url, action, payload={}, basic_auth, jwt=None, file_dict=None)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1044\u001b[0;31m         return DispatchRequest.send_request_by_action(\n\u001b[0m\u001b[1;32m   1045\u001b[0m             \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1046\u001b[0m             \u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/terminusdb-client-python/terminusdb_client/woqlclient/dispatchRequest.py\u001b[0m in \u001b[0;36msend_request_by_action\u001b[0;34m(cls, url, action, payload, basic_auth, remote_auth, file_dict, insecure)\u001b[0m\n\u001b[1;32m    179\u001b[0m                     \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequest_response\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 181\u001b[0;31m                 raise (\n\u001b[0m\u001b[1;32m    182\u001b[0m                     APIError(\n\u001b[1;32m    183\u001b[0m                         \u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAPIError\u001b[0m: [\n  {\n    \"@type\":\"vio:ViolationWithDatatypeObject\",\n    \"vio:base_type\": {\"@type\":\"xsd:string\", \"@value\":\"xsd:nonNegativeInteger\"},\n    \"vio:literal\": {\"@type\":\"xsd:anySimpleType\", \"@value\":-97},\n    \"vio:message\":\"Not a well formed xsd:nonNegativeInteger\",\n    \"vio:property\": {\"@type\":\"xsd:anyURI\", \"@value\":\"terminusdb:///schema#balance\"}\n  }\n]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Subtract less\n",
     "query = WQ().woql_and(\n",
@@ -160,28 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'@type': 'api:WoqlResponse',\n",
-       " 'api:status': 'api:success',\n",
-       " 'api:variable_names': ['AccountID', 'Balance'],\n",
-       " 'bindings': [{'AccountID': 'terminusdb:///data/001234',\n",
-       "   'Balance': {'@type': 'http://www.w3.org/2001/XMLSchema#decimal',\n",
-       "    '@value': 13}}],\n",
-       " 'deletes': 0,\n",
-       " 'inserts': 0,\n",
-       " 'transaction_retry_count': 0}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mike only has 13 money\n",
     "(WQ().triple(account_id, \"scm:owner\", \"Mike\") \n",
