--- a/movies-data/Movie Data.ipynb
+++ b/movies-data/Movie Data.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "db_id = \"movie_graph\"\n",
-    "client = WOQLClient(\"http://localhost:6363\")\n",
+    "client = WOQLClient(\"https://127.0.0.1:6363\")\n",
     "client.connect(key=\"root\", account=\"admin\", user=\"admin\")\n",
     "client.db(db_id)"
    ]
@@ -41,17 +41,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-7e6c1aa3bb4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWOQLQuery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresult_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwoqldf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery_to_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Terminus/terminus-client-python/terminusdb_client/woqldataframe/woqlDataframe.py\u001b[0m in \u001b[0;36mquery_to_df\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0mWOQLClient\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mcreate\u001b[0m \u001b[0ma\u001b[0m \u001b[0mWOQLClient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m     \"\"\"\n\u001b[0;32m--> 222\u001b[0;31m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_header\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    223\u001b[0m     \u001b[0mdtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m     \u001b[0mcolumn_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Terminus/terminus-client-python/terminusdb_client/woqldataframe/woqlDataframe.py\u001b[0m in \u001b[0;36mextract_header\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \"\"\"\n\u001b[1;32m     55\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0m_is_empty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mEmptyException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Query is empty\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Terminus/terminus-client-python/terminusdb_client/woqldataframe/woqlDataframe.py\u001b[0m in \u001b[0;36m_is_empty\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_is_empty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"bindings\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cheuktingho/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
+      "  warnings.warn(\"DEPRECATED in 0.3.0: use result_to_df instead.\")\n"
      ]
     }
    ],
@@ -62,9 +56,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Object</th>\n",
+       "      <th>Predicate</th>\n",
+       "      <th>Subject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>terminusdb:///schema#Genre</td>\n",
+       "      <td>http://www.w3.org/1999/02/22-rdf-syntax-ns#type</td>\n",
+       "      <td>terminusdb:///data/Genre_Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>http://www.w3.org/2000/01/rdf-schema#label</td>\n",
+       "      <td>terminusdb:///data/Genre_Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>terminusdb:///schema#Genre</td>\n",
+       "      <td>http://www.w3.org/1999/02/22-rdf-syntax-ns#type</td>\n",
+       "      <td>terminusdb:///data/Genre_Action,Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Action,Adventure</td>\n",
+       "      <td>http://www.w3.org/2000/01/rdf-schema#label</td>\n",
+       "      <td>terminusdb:///data/Genre_Action,Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>terminusdb:///schema#Genre</td>\n",
+       "      <td>http://www.w3.org/1999/02/22-rdf-syntax-ns#type</td>\n",
+       "      <td>terminusdb:///data/Genre_Action,Adventure,Biog...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Object  \\\n",
+       "0  terminusdb:///schema#Genre   \n",
+       "1                      Action   \n",
+       "2  terminusdb:///schema#Genre   \n",
+       "3            Action,Adventure   \n",
+       "4  terminusdb:///schema#Genre   \n",
+       "\n",
+       "                                         Predicate  \\\n",
+       "0  http://www.w3.org/1999/02/22-rdf-syntax-ns#type   \n",
+       "1       http://www.w3.org/2000/01/rdf-schema#label   \n",
+       "2  http://www.w3.org/1999/02/22-rdf-syntax-ns#type   \n",
+       "3       http://www.w3.org/2000/01/rdf-schema#label   \n",
+       "4  http://www.w3.org/1999/02/22-rdf-syntax-ns#type   \n",
+       "\n",
+       "                                             Subject  \n",
+       "0                    terminusdb:///data/Genre_Action  \n",
+       "1                    terminusdb:///data/Genre_Action  \n",
+       "2          terminusdb:///data/Genre_Action,Adventure  \n",
+       "3          terminusdb:///data/Genre_Action,Adventure  \n",
+       "4  terminusdb:///data/Genre_Action,Adventure,Biog...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result_df.head()"
    ]
@@ -78,9 +161,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cheuktingho/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
+      "  warnings.warn(\"DEPRECATED in 0.3.0: use result_to_df instead.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_name</th>\n",
+       "      <th>some_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Nicole Kidman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Genius</td>\n",
+       "      <td>Nicole Kidman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lion</td>\n",
+       "      <td>Nicole Kidman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Secret in Their Eyes</td>\n",
+       "      <td>Nicole Kidman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Golden Compass</td>\n",
+       "      <td>Nicole Kidman</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             movie_name      some_name\n",
+       "0             Australia  Nicole Kidman\n",
+       "1                Genius  Nicole Kidman\n",
+       "2                  Lion  Nicole Kidman\n",
+       "3  Secret in Their Eyes  Nicole Kidman\n",
+       "4    The Golden Compass  Nicole Kidman"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "actor = \"Nicole Kidman\"\n",
     "query = (WOQLQuery().select(\"v:some_name\", \"v:movie_name\")\n",
@@ -105,9 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cheuktingho/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
+      "  warnings.warn(\"DEPRECATED in 0.3.0: use result_to_df instead.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Despicable Me 2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "genre = \"Adventure\"\n",
     "query = (WOQLQuery().select(\"v:gerne_name\", \"v:movie_name\")\n",
