--- a/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
+++ b/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
@@ -27,26 +27,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'@type': 'api:DbDeleteResponse', 'api:status': 'api:success'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Uncomment this to delete your old database first\n",
     "# client.delete_database(dbid)"
@@ -58,11 +39,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
+      "Warning: Database \"pybike\" already exists!\n",
+      "\n"
      ]
     }
    ],
@@ -84,14 +65,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "{'@type': 'api:WoqlResponse',\n",
@@ -99,7 +72,7 @@
        " 'api:variable_names': [],\n",
        " 'bindings': [{}],\n",
        " 'deletes': 0,\n",
-       " 'inserts': 34,\n",
+       " 'inserts': 0,\n",
        " 'transaction_retry_count': 0}"
       ]
      },
@@ -138,16 +111,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csvs = [\n",
     "    \"https://terminusdb.com/t/data/bikeshare/2011-capitalbikeshare-tripdata.csv\",\n",
@@ -282,16 +246,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def query_data(client):\n",
     "    \"\"\"The query which query the database\n",
@@ -323,9 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n",
-      "/Users/saran-7185/personal_repos/pycon-devsprint2020/terminusdb/terminusdb-bootstrap/env/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
+      "/Users/cheuktingho/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
       "  warnings.warn(\"DEPRECATED in 0.3.0: use result_to_df instead.\")\n"
      ]
     },
@@ -495,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
