Use lowercase in dbid names

--- a/bank-tutorial/taking_terminus_to_the_bank.ipynb
+++ b/bank-tutorial/taking_terminus_to_the_bank.ipynb
@@ -15,7 +15,7 @@
     "user = \"admin\"\n",
     "account = \"admin\"\n",
     "key = \"root\"\n",
-    "dbid = \"Bank_Balance_Example\"\n",
+    "dbid = \"bank_balance_example\"\n",
     "repository = \"local\"\n",
     "label = \"Bank Balance Example\"\n",
     "description = \"An example database for playing with bank accounts\"\n",
