update with WOQLView example

--- a/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
+++ b/bike-tutorial/python/Create TerminusDB Graph with Python Client.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from terminusdb_client import WOQLQuery\n",
     "from terminusdb_client import WOQLClient\n",
     "from terminusdb_client import woqldataframe\n",
+    "from terminusdb_client import WOQLView\n",
     "\n",
     "server_url = \"https://127.0.0.1:6363\"\n",
     "user = \"admin\"\n",
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Database \"pybike\" already exists!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the database\n",
     "try:\n",
@@ -61,26 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'@type': 'api:WoqlResponse',\n",
-       " 'api:status': 'api:success',\n",
-       " 'api:variable_names': [],\n",
-       " 'bindings': [{}],\n",
-       " 'deletes': 0,\n",
-       " 'inserts': 0,\n",
-       " 'transaction_retry_count': 0}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_schema(client, commit_msg):\n",
     "    \"\"\"The query which creates the schema\n",
@@ -109,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -271,165 +246,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cheuktingho/.pyenv/versions/3.7.3/envs/test-terminusdb-client/lib/python3.7/site-packages/terminusdb_client/woqldataframe/woqlDataframe.py:251: UserWarning: DEPRECATED in 0.3.0: use result_to_df instead.\n",
-      "  warnings.warn(\"DEPRECATED in 0.3.0: use result_to_df instead.\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>End</th>\n",
-       "      <th>End_Label</th>\n",
-       "      <th>Start</th>\n",
-       "      <th>Start_Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>terminusdb:///data/Station_31010</td>\n",
-       "      <td>S Glebe &amp; Potomac Ave</td>\n",
-       "      <td>terminusdb:///data/Station_31007</td>\n",
-       "      <td>Crystal City Metro / 18th &amp; Bell St</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>terminusdb:///data/Station_31010</td>\n",
-       "      <td>S Glebe &amp; Potomac Ave</td>\n",
-       "      <td>terminusdb:///data/Station_31007</td>\n",
-       "      <td>Crystal City Metro / 18th &amp; Bell St</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>terminusdb:///data/Station_31229</td>\n",
-       "      <td>New Hampshire Ave &amp; T St NW</td>\n",
-       "      <td>terminusdb:///data/Station_31101</td>\n",
-       "      <td>14th &amp; V St NW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>terminusdb:///data/Station_31229</td>\n",
-       "      <td>New Hampshire Ave &amp; T St NW</td>\n",
-       "      <td>terminusdb:///data/Station_31101</td>\n",
-       "      <td>14th &amp; V St NW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>terminusdb:///data/Station_31207</td>\n",
-       "      <td>Georgia Ave and Fairmont St NW</td>\n",
-       "      <td>terminusdb:///data/Station_31101</td>\n",
-       "      <td>14th &amp; V St NW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1882</th>\n",
-       "      <td>terminusdb:///data/Station_31286</td>\n",
-       "      <td>11th &amp; O St NW</td>\n",
-       "      <td>terminusdb:///data/Station_31636</td>\n",
-       "      <td>New Jersey Ave &amp; N St NW/Dunbar HS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1883</th>\n",
-       "      <td>terminusdb:///data/Station_31286</td>\n",
-       "      <td>11th &amp; O St NW</td>\n",
-       "      <td>terminusdb:///data/Station_31636</td>\n",
-       "      <td>New Jersey Ave &amp; N St NW/Dunbar HS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1884</th>\n",
-       "      <td>terminusdb:///data/Station_31612</td>\n",
-       "      <td>D St &amp; Maryland Ave NE</td>\n",
-       "      <td>terminusdb:///data/Station_31641</td>\n",
-       "      <td>2nd St &amp; Massachusetts Ave NE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1885</th>\n",
-       "      <td>terminusdb:///data/Station_31609</td>\n",
-       "      <td>Maine Ave &amp; 7th St SW</td>\n",
-       "      <td>terminusdb:///data/Station_31648</td>\n",
-       "      <td>Potomac Ave &amp; Half St SW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1886</th>\n",
-       "      <td>terminusdb:///data/Station_32038</td>\n",
-       "      <td>King Farm Blvd &amp; Piccard Dr</td>\n",
-       "      <td>terminusdb:///data/Station_32045</td>\n",
-       "      <td>Shady Grove Metro West</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1887 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   End                       End_Label  \\\n",
-       "0     terminusdb:///data/Station_31010           S Glebe & Potomac Ave   \n",
-       "1     terminusdb:///data/Station_31010           S Glebe & Potomac Ave   \n",
-       "2     terminusdb:///data/Station_31229     New Hampshire Ave & T St NW   \n",
-       "3     terminusdb:///data/Station_31229     New Hampshire Ave & T St NW   \n",
-       "4     terminusdb:///data/Station_31207  Georgia Ave and Fairmont St NW   \n",
-       "...                                ...                             ...   \n",
-       "1882  terminusdb:///data/Station_31286                  11th & O St NW   \n",
-       "1883  terminusdb:///data/Station_31286                  11th & O St NW   \n",
-       "1884  terminusdb:///data/Station_31612          D St & Maryland Ave NE   \n",
-       "1885  terminusdb:///data/Station_31609           Maine Ave & 7th St SW   \n",
-       "1886  terminusdb:///data/Station_32038     King Farm Blvd & Piccard Dr   \n",
-       "\n",
-       "                                 Start                          Start_Label  \n",
-       "0     terminusdb:///data/Station_31007  Crystal City Metro / 18th & Bell St  \n",
-       "1     terminusdb:///data/Station_31007  Crystal City Metro / 18th & Bell St  \n",
-       "2     terminusdb:///data/Station_31101                       14th & V St NW  \n",
-       "3     terminusdb:///data/Station_31101                       14th & V St NW  \n",
-       "4     terminusdb:///data/Station_31101                       14th & V St NW  \n",
-       "...                                ...                                  ...  \n",
-       "1882  terminusdb:///data/Station_31636   New Jersey Ave & N St NW/Dunbar HS  \n",
-       "1883  terminusdb:///data/Station_31636   New Jersey Ave & N St NW/Dunbar HS  \n",
-       "1884  terminusdb:///data/Station_31641        2nd St & Massachusetts Ave NE  \n",
-       "1885  terminusdb:///data/Station_31648             Potomac Ave & Half St SW  \n",
-       "1886  terminusdb:///data/Station_32045               Shady Grove Metro West  \n",
-       "\n",
-       "[1887 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "woqldataframe.query_to_df(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view = WOQLView()\n",
+    "view.edges([\"Start\", \"End\"])\n",
+    "view.node(\"Start_Label\", \"End_Label\").hidden(True)\n",
+    "view.node(\"End\").color([53,105,53]).icon({\"color\": [255,0,0], \"unicode\": \"🏁\"}).text(\"v:End_Label\").size(25).charge(-10)\n",
+    "view.node(\"Start\").icon({\"color\": [255,0,0], \"label\": True}).text(\"v:Start_Label\").size(25).collision_radius(10)\n",
+    "view.edge(\"Start\", \"End\").weight(100)\n",
+    "view.show(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
